sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:11: error: '<-' expected but ')' found.
    for (i+ecart<getNombreValeurs()-1){
                                     ^AlgCombSort:23: error: illegal start of simple expression
  }while ecart>1
  ^AlgCombSort:23: error: '(' expected but identifier found.
  }while ecart>1
         ^